<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9100112"
    android:contentDescription="@null"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title"
        android:fontFamily="casual"
        android:shadowColor="#B2000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/desc_insert_value"
            app:srcCompat="@drawable/img_money_foreground" />

        <EditText
            android:id="@+id/editTextValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:ems="10"
            android:importantForAccessibility="no"
            android:inputType="text"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="36sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/desc_insert_number_of_people"
            android:foregroundTint="#FF1515"
            app:srcCompat="@drawable/img_people_foreground" />

        <EditText
            android:id="@+id/editTextGroupNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:ems="10"
            android:importantForAccessibility="no"
            android:inputType="number"
            android:text="2"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="36sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="51dp" />

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewResult2"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:shadowColor="#B2000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:text="R$ "
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:shadowColor="#B2000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:text="0"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="51dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/desc_share_the_value"
            android:focusable="auto"
            app:backgroundTint="#304F7A"
            app:fabCustomSize="100dp"
            app:maxImageSize="100dp"
            app:srcCompat="@android:drawable/ic_menu_share" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/desc_listen_the_value"
            android:focusable="auto"
            android:focusableInTouchMode="false"
            app:backgroundTint="#304F7A"
            app:fabCustomSize="100dp"
            app:maxImageSize="100dp"
            app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
    </LinearLayout>

</LinearLayout>